namespace AmazonLab2.Domain.Entities;

public sealed class Customer
{
    public int Id { get; set; }
    public string ExternalId { get; set; } = string.Empty;
    public string FullName { get; set; } = string.Empty;
    public string Email { get; set; } = string.Empty;

    public List<Order> Orders { get; set; } = [];
}
