@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

' --- Catalog ---
class Category {
  +id: String
  +name: String
}
abstract class Product {
  +asin: String
  +title: String
  +getPrice(): Money
}
class PhysicalProduct {
  +weightGrams: int
}
class DigitalProduct {
  +downloadUrl: String
}

Product <|-- PhysicalProduct
Product <|-- DigitalProduct

' Category hierarchy (aggregation)
Category "1" o-- "0..*" Category : subcategories
Category "1" -- "0..*" Product : contains

' --- Marketplace offer ---
class Listing {
  +listingId: String
  +price: Money
  +quantity: int
}
Product "1" -- "0..*" Listing : offeredAs

' --- Buyer purchase flow ---
class Customer {
  +customerId: String
  +email: String
}

class Cart {
  +cartId: String
  +getTotal(): Money
}
class CartItem {
  +qty: int
  +unitPrice: Money
}

Customer "1" -- "0..1" Cart : activeCart
Cart *-- "1..*" CartItem
CartItem --> Listing

class Order {
  +orderId: String
  +status: String
  +total: Money
}
class OrderItem {
  +qty: int
  +priceAtPurchase: Money
}
Customer "1" -- "0..*" Order
Order *-- "1..*" OrderItem
OrderItem --> Listing

class Shipment {
  +trackingNumber: String
  +status: String
}
Order "1" *-- "0..1" Shipment

@enduml